add:添加route add:添加动态路由 add:添加动态路由对应菜单测试生成

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
   </head>
-  <body style="background-color: #dedede">
+  <body class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
